fix: align bio-titles to left on mobile with no padding
On mobile, bio-titles now uses flex-start alignment, left text-align,
and no padding instead of inheriting the desktop right-aligned style.

--- a/client-react/src/pages/About.css
+++ b/client-react/src/pages/About.css
@@ -127,7 +127,13 @@ footer {
 
   .bio-col-left {
     padding-right: 0;
-    padding: 0 30px;
+    padding: 0;
+  }
+
+  .bio-titles {
+    align-items: flex-start;
+    text-align: left;
+    padding-right: 0;
   }
 
   .bio-col-right {
